# amplifier-bundle-orchestration

./: .gitmodules  README.md  bundle.md  pyproject.toml
amplifier-bundle-orchestration/: README.md  bundle.md
amplifier-bundle-orchestration/agents/: workflow-designer.md
amplifier-bundle-orchestration/behaviors/: orchestration-knowledge.yaml
amplifier-bundle-orchestration/bundles/: conversation-observers.md  multi-context.md  observers.md
amplifier-bundle-orchestration/bundles/observers/agents/: observer-config.md
amplifier-bundle-orchestration/bundles/observers/context/: observers-guide.md
amplifier-bundle-orchestration/context/: conversation-observers-guide.md  instructions.md  multi-context-guide.md  orchestrator-selection.md
amplifier-bundle-orchestration/examples/: essay-with-critics.py
amplifier-bundle-orchestration/examples/observer-configs/: code-review-observers.yaml  quality-observers.yaml
amplifier-bundle-orchestration/examples/workflows/: code-review-pipeline.yaml  content-creation.yaml  research-pipeline.yaml
amplifier-bundle-orchestration/modules/amplifier-module-orchestrator-conversation-observers/amplifier_module_orchestrator_conversation_observers/: __init__.py  cli_orchestrator.py  config.py  orchestrator.py
amplifier-bundle-orchestration/modules/amplifier-module-orchestrator-observers/: README.md  pyproject.toml
amplifier_orchestration/: __init__.py  background.py  events.py  spawn.py  triggers.py
tests/: test_events.py  test_spawn.py  test_triggers.py
(+2 files in other folders)
